log/build_2023-09-18_22-06-12/my_bleak/stderr.log
  File "/home/ngocdai/lidar_ws/install/my_bleak/lib/python3.10/site-packages/my_bleak/bleak_node.py", line 59
    self.get_logger().info("Start notified"))
                                            ^
SyntaxError: unmatched ')'

